# git-issue

./: CONTEXT.md  Cargo.toml  event.json  justfile  shell.nix
.config/: nextest.toml
doc/: BACKLOG.md  GIT_BUG.md  GIT_MODEL.md  NIX_SHELL.md  PLAN-1.md  PLAN.md  STORAGE.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs  output.rs
src/cli/commands/: assign.rs  create.rs  edit.rs  label.rs  list.rs  mod.rs  show.rs  status.rs  sync.rs
src/common/: comment.rs  env.rs  event.rs  identity.rs  issue.rs  mod.rs  priority.rs
src/storage/: errors.rs  issue_store.rs  mod.rs  repo.rs
