[package]
name = "git-tracker"
version = "0.1.0"
edition = "2024"
authors = ["Git Tracker Contributors"]
description = "An offline-first issue tracker with git backend"
license = "MIT OR Apache-2.0"

[dependencies]
# Git operations
gix = "0.73"
gix-ref = "0.53"
gix-object = "0.50"

# Serialization & data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# CLI & UI
clap = { version = "4.0", features = ["derive"] }
console = "0.16"
indicatif = "0.18"

# Error handling & logging
anyhow = "1.0"
thiserror = "2.0"
env_logger = "0.11"

# Async runtime (for future use)
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"
